--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -1,6 +1,13 @@
 /* global styles defined at the topmost level.
    these can be overridden by subsequent selectors. */
 
+/* Downloaded the font format */
+@font-face {
+    font-family: "Atkinson Hyperlegible";
+    src: url(AtkinsonHyperlegible-Regular.woff) format('woff');
+    src: url(AtkinsonHyperlegible-Regular.ttf) format('truetype');
+}
+
 /* CSS global styles */
 h1,
 h2,
@@ -8,7 +15,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Atkinson Hyperlegible";
+  font-family: "Atkinson Hyperlegible", sans-serif;
   line-height: 120%;
 }
 
@@ -38,7 +45,7 @@ h6 {
 
 .hero {
   font-size: 80px;
-  font-family: "Atkinson Hyperlegible";
+  font-family: "Atkinson Hyperlegible", sans-serif;
   line-height: 105%;
 }
 
@@ -73,7 +80,7 @@ h6 {
 }
 
 p {
-  font-family: "Atkinson Hyperlegible";
+  font-family: "Atkinson Hyperlegible", sans-serif;
   margin-top: 0;
   margin-bottom: 0;
   font-size: 16px;
