--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -1,4 +1,5 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en-us" />
   <meta name="robots" content="all" />
@@ -10,6 +11,7 @@
 
 <% if  item.identifier =~ /^\/help\/bioc-views\/package-pages\// \
   and not item.identifier =~ /\/all-/ %>
+
   <meta property="og:title" content="<%= item[:title] %>" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Bioconductor" />
@@ -54,6 +56,7 @@
 	title = "" if @item[:title].nil? or @item[:title].strip.empty?
   %>
   <title>Bioconductor<%= title %></title>
+  <link rel="stylesheet" type="text/css" href="/style/Fonts_colors.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/bioconductor-v2.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/bioconductor.css" media="screen" /><% if item.identifier =~ /^\/help\/workflows\/.*\// %>
   <link rel="stylesheet" type="text/css" href="/style/workflows.css" media="screen" /><% end %>
