--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -1,6 +1,10 @@
 /* global styles defined at the topmost level.
    these can be overridden by subsequent selectors. */
 
+body {
+  font-family: "Atkinson Hyperlegible";
+}
+
 /* CSS global styles */
 h1,
 h2,
@@ -72,7 +76,7 @@ h6 {
   }
 }
 
-p {
+p, a, span {
   font-family: "Atkinson Hyperlegible";
   margin-top: 0;
   margin-bottom: 0;
@@ -181,4 +185,110 @@ p {
   --gradient-brand: linear-gradient(to right, #0087AF, #0484A9, #18A603);
   --gradient-brandReverse: linear-gradient(to right, #18A603, #0484A9, #0087AF);
   --gradient-purpleBlue: linear-gradient(to right, #445CF3, #A333F1);
+}
+
+
+
+#SiteContainer {
+  margin:0 auto; /* floats the design center */
+  width:1600px;   /* change the site design width here */
+  /*border:2px black solid;*/
+}
+
+
+
+
+
+#SiteMasthead {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 97.5px;
+  justify-content: space-between;
+  flex-direction: row;
+  background: #fff;
+}
+
+.header-div {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 24px;
+}
+
+a {
+  text-decoration: none;
+  color: #070707;
+}
+
+.header-links {
+  display: flex;
+  gap: 32px;
+}
+
+.header-links a:hover {
+  text-decoration: underline;
+  text-underline-offset: 7px;
+  text-decoration-thickness: 3px;
+}
+
+#search_bar {
+  border-radius: 64px;
+  padding-left: 30px;
+  border: 1px solid var(--primary-p-50, #ebf4f7);
+  background-image: url(https://cdn-icons-png.flaticon.com/512/4194/4194718.png) no-repeat left;
+  background-size: 20px;
+  width: 240px;
+  height: 40px;
+}
+
+#search_bar:focus {
+  border-color: linear-gradient(to right,  #008daf, #0484a9, #18a603);
+}
+
+.masthead_logo {
+  display: flex;
+  width: 201.388px;
+  height: 57.95px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.header-button {
+  background-image: var(--gradient-brand);
+  border-radius: 128px;
+  box-sizing: border-box;
+  color: var(--primary-P400);
+  display: flex;
+  height: 40px;
+  padding: 2px;
+  width: 141px;
+}
+
+
+.header-button:hover {
+  color: #fff;
+}
+
+.header-button:hover svg path {
+  stroke: white;
+}
+
+.header-button span {
+  align-items: center;
+  border-radius: 64px;
+  display: flex;
+  justify-content: center;
+  background: #fff;
+  transition: background 0.5s ease;
+  width: 100%;
+  gap: 5px;
+  margin-bottom: 1px;
+  margin-left: 1px;
+  margin-right: 1px;
+}
+
+.header-button:hover span {
+  background: #035771;
 }
