--- a/layouts/course.html
+++ b/layouts/course.html
@@ -4,6 +4,7 @@
   <body>
     <%= render("/_nav/", :section_navigation => has_subnav?(@item) && subnav_items(@item).length > 0) %>
     <div id="SiteContainer" class="SiteContainer">
+      <%= render("/_header/") %>
       <div id="PageContent" class="PageContent WithRightRail">
         <%= render("/_crumbs/") %>
         <h1><img src="/images/icons/help.gif" alt="" /><%=  @item[:title] %></h1>
