--- a/layouts/default.html
+++ b/layouts/default.html
@@ -6,6 +6,7 @@ prefix="og: http://ogp.me/ns#">
     <%= render("/_nav/", :section_navigation => has_subnav?(@item) && subnav_items(@item).length > 0) %>
 
     <div id="SiteContainer" class="SiteContainer">
+	  <%= render("/_header/") %>
       <% if has_subnav?(@item) %>
       <div id="PageContent" class="PageContent WithRightRail">
       <% else %>
