--- a/assets/style/fonts.css
+++ b/assets/style/fonts.css
@@ -56,7 +56,7 @@ h6 {
   line-height: 105%;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (width <= 700px) {
   .hero {
     font-size: 40px;
   }
