--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -6,7 +6,7 @@
 <!-- Global font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&display=swap" rel="stylesheet">
 
 <% if  item.identifier =~ /^\/help\/bioc-views\/package-pages\// \
   and not item.identifier =~ /\/all-/ %>
