--- a/assets/style/fonts.css
+++ b/assets/style/fonts.css
@@ -27,62 +27,63 @@ h6 {
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 2.25rem; /* 36px */
 }
 
 h2 {
-  font-size: 31px;
+  font-size: 2rem; /* 32px */
 }
 
 h3 {
-  font-size: 25px;
+  font-size: 1.5625rem; /* 25px */
 }
 
 h4 {
-  font-size: 23px;
+  font-size: 1.4375rem; /* 23px */
 }
 
 h5 {
-  font-size: 19px;
+  font-size: 1.1875rem; /* 19px */
 }
 
 h6 {
-  font-size: 18px;
+  font-size: 1.125rem; /* 18px */
 }
 
 .hero {
-  font-size: 80px;
+  font-size: 5rem; /* 80px */
   font-family: "Atkinson Hyperlegible", sans-serif;
   line-height: 105%;
 }
 
-@media screen and (width <= 700px) {
+@media screen and (max-width: 43.75rem) {
+  /* 700px */
   .hero {
-    font-size: 40px;
+    font-size: 2.5rem; /* 40px */
   }
 
   h1 {
-    font-size: 34px;
+    font-size: 2.125rem; /* 34px */
   }
 
   h2 {
-    font-size: 24px;
+    font-size: 1.5rem; /* 24px */
   }
 
   h3 {
-    font-size: 22px;
+    font-size: 1.375rem; /* 22px */
   }
 
   h4 {
-    font-size: 20px;
+    font-size: 1.25rem; /* 20px */
   }
 
   h5 {
-    font-size: 18px;
+    font-size: 1.125rem; /* 18px */
   }
 
   h6 {
-    font-size: 17px;
+    font-size: 1.0625rem; /* 17px */
   }
 }
 
@@ -90,7 +91,7 @@ p {
   font-family: "Atkinson Hyperlegible", sans-serif;
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 16px;
+  font-size: 1rem; /* 16px */
   line-height: 130%;
   letter-spacing: 0;
 }
@@ -101,11 +102,11 @@ p {
 }
 
 .code-body {
-  font-size: 20px;
+  font-size: 1.25rem; /* 20px */
 }
 
 .code-small {
-  font-size: 16px;
+  font-size: 1rem; /* 16px */
 }
 
 .format-bold {
@@ -122,15 +123,15 @@ p {
 }
 
 .text-xsmall {
-  font-size: 10px;
+  font-size: 0.625rem; /* 10px */
   line-height: 120%;
 }
 
 .text-small {
-  font-size: 13px;
+  font-size: 0.8125rem; /* 13px */
   line-height: 120%;
 }
 
 .text-large {
-  font-size: 20px;
+  font-size: 1.25rem; /* 20px */
 }
