--- a/assets/style/fonts.css
+++ b/assets/style/fonts.css
@@ -54,7 +54,7 @@ h6 {
   line-height: 105%;
 }
 
-@media screen and (max-width: 43.75rem) {
+@media screen and (width <= 43.75rem) {
   /* 700px */
   .hero {
     font-size: 2.5rem; /* 40px */
