--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -182,3 +182,46 @@ p {
   --gradient-brandReverse: linear-gradient(to right, #18A603, #0484A9, #0087AF);
   --gradient-purpleBlue: linear-gradient(to right, #445CF3, #A333F1);
 }
+
+
+#SiteGlobalFooter {
+  background-color: #121212;
+  padding: 40px 80px;
+  border-style: solid;
+  border-width: 10px 0 0;
+  border-image: linear-gradient(to left, #008daf, #0484a9, #18a603) 1;
+  margin-top: 30px;
+  color: #ffffff;
+  font-size: 70%;
+  display: flex;
+  flex-direction: column;
+}
+
+.link-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.list-container {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.SiteGlobalFooter a,
+p {
+  color: var(--default-white, #fff);
+  font-size: 16px;
+  line-height: 130%;
+  text-decoration: none;
+}
+
+.contact-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.SiteGlobalFooter h3 {
+  color: var(--default-white, #fff);
+}
