--- a/assets/style/fonts.css
+++ b/assets/style/fonts.css
@@ -34,19 +34,19 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5625rem; /* 25px */
+  font-size: 1.6rem; /* 25px */
 }
 
 h4 {
-  font-size: 1.4375rem; /* 23px */
+  font-size: 1.5rem; /* 23px */
 }
 
 h5 {
-  font-size: 1.1875rem; /* 19px */
+  font-size: 1.2rem; /* 19px */
 }
 
 h6 {
-  font-size: 1.125rem; /* 18px */
+  font-size: 1.2rem; /* 18px */
 }
 
 .hero {
@@ -54,14 +54,14 @@ h6 {
   line-height: 105%;
 }
 
-@media screen and (width <= 43.75rem) {
+@media screen and (width <= 700px) {
   /* 700px */
   .hero {
     font-size: 2.5rem; /* 40px */
   }
 
   h1 {
-    font-size: 2.125rem; /* 34px */
+    font-size: 2.1rem; /* 34px */
   }
 
   h2 {
@@ -69,7 +69,7 @@ h6 {
   }
 
   h3 {
-    font-size: 1.375rem; /* 22px */
+    font-size: 1.4rem; /* 22px */
   }
 
   h4 {
@@ -81,7 +81,7 @@ h6 {
   }
 
   h6 {
-    font-size: 1.0625rem; /* 17px */
+    font-size: 1.1rem; /* 17px */
   }
 }
 
@@ -120,12 +120,12 @@ p {
 }
 
 .text-xsmall {
-  font-size: 0.625rem; /* 10px */
+  font-size: 0.6rem; /* 10px */
   line-height: 120%;
 }
 
 .text-small {
-  font-size: 0.8125rem; /* 13px */
+  font-size: 0.8rem; /* 13px */
   line-height: 120%;
 }
 
