--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -2,15 +2,13 @@ body {
   font-family: "Atkinson Hyperlegible", sans-serif;
 }
 
-/* SiteContainer is the single div containing every other element in the site.
+/* "site-container" is the single div containing every other element in the site.
    it floats center, with no vertical margins, and provides the overall
    width of the site. we provide both an id and a class name in order
    to allow more flexible cascading: id rules are highly ranked while
    class names play nicer with other rules. */
 
-/* stylelint-disable */
-#SiteContainer {
+#site-container {
   margin: 0 auto; /* floats the design center */
   width: 1600px; /* change the site design width here */
 }
-/* stylelint-enable */
