--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -20,7 +20,7 @@ body {
   left: 0;
   margin: 0 auto;
   width: 100%;
-  height: 97.5px;
+  height: 98px;
   background: #fff;
   display: flex;
   align-items: center;
@@ -33,10 +33,11 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: calc(100% - 2rem);
 }
 
 @media (min-width: 700px) {
-  .header-logo{
+  .header-logo {
     display: flex;
     align-items: center;
   }
@@ -46,7 +47,7 @@ body {
     flex-direction: row;
     align-items: center;
     gap: 20px;
-  } 
+  }
 
   a {
     text-decoration: transparent;
@@ -54,12 +55,12 @@ body {
     transition: 300ms;
   }
 
-  .header-links {
+  .nav-links {
     display: flex;
     gap: 32px;
   }
 
-  .header-links a:hover {
+  .nav-links a:hover {
     text-decoration: underline;
     text-underline-offset: 7px;
     text-decoration-thickness: 3px;
