--- a/layouts/_header.html
+++ b/layouts/_header.html
@@ -1,36 +1,33 @@
-<div id="site-masthead" class="site-masthead">
+<header id="site-masthead" class="site-masthead">
   <div class="header-size">
-  <div class="header-logo">  
+    <div class="header-logo">  
     <img
     src="/images/Logo.svg"
-    border="0"
     class="masthead_logo"
-    height="78"
-    width="260"
     alt="Bioconductor - open source software for bioinformatics"
     />
-  </div>
-
-  <div class="header-desktop" id="header-div-desktop">
-    <div class="header-links">
-    <a class="format-bold" href="/about/">About</a>
-    <a class="format-bold" href="/developers/">Developers</a>
-    <a class="format-bold" href="/help/">Learn</a>
     </div>
 
-    <div class="search-container">
-      <form
-      class="site_search"
-      id="search_form"
-      method="GET"
-      action="/help/search/index.html"
-      >
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
+    <nav class="header-desktop" id="header-div-desktop"> 
+      <div class="nav-links">
+        <a class="format-bold" href="/about/">About</a>
+        <a class="format-bold" href="/developers/">Developers</a>
+        <a class="format-bold" href="/help/">Learn</a>
+      </div>
+
+      <div class="search-container">
+        <form
+          class="site_search"
+          id="search_form"
+          method="GET"
+          action="/help/search/index.html"
+        >
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
         <path d="M17.5 18.25L12.5 13.25M14.1667 9.08333C14.1667 12.305 11.555 14.9167 8.33333 14.9167C5.11167 14.9167 2.5 12.305 2.5 9.08333C2.5 5.86167 5.11167 3.25 8.33333 3.25C11.555 3.25 14.1667 5.86167 14.1667 9.08333Z" stroke="#3792AD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-      <input id="search_bar" name="search_bar" placeholder="Search"/>
-      </form>
-    </div>
+          </svg>
+          <input id="search_bar" name="search_bar" placeholder="Search"/>
+        </form>
+      </div>
 
     <a class="header-button" href=/install/>
       <span class="format-bold">Get Started <svg xmlns="http://www.w3.org/2000/svg" width="14" height="15" viewBox="0 0 14 15" fill="none">
@@ -38,6 +35,6 @@
           </svg>
       </span>
     </a>
-  </div>
+    </nav>
   </div>  
-</div>
+</header>
