--- a/assets/style/fonts.css
+++ b/assets/style/fonts.css
@@ -85,12 +85,14 @@ h6 {
   }
 }
 
-p {
+p,
+a {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 1rem; /* 16px */
   line-height: 130%;
   letter-spacing: 0;
+  text-decoration: none;
 }
 
 .code {
