--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -1,4 +1,5 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en-us" />
   <meta name="robots" content="all" />
@@ -73,6 +74,12 @@
     rel="stylesheet"
     type="text/css"
     href="/style/fonts.css"
+    media="screen"
+  />
+   <link
+    rel="stylesheet"
+    type="text/css"
+    href="/style/footer.css"
     media="screen"
   />
   <link
