--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -6,7 +6,7 @@
   padding: 2.5rem 6.25rem; /* 40px, 100px */
   border-style: solid;
   border-width: 0.625rem 0 0; /* 10px */
-  border-image: linear-gradient(to left, #008daf, #0484a9, #18a603) 1;
+  border-image: var(--gradient-brandreverse) 1;
   margin-top: 1.875rem; /* 30px */
   color: #ffffff;
   font-size: 70%;
