--- a/layouts/_footer_new.html
+++ b/layouts/_footer_new.html
@@ -1,4 +1,4 @@
-<footer class="GlobalFooter">
+<footer class="global-footer">
   <div class="link-container">
     <div class="link-container-inner">
       <ul class="list-container">
