--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -8,7 +8,7 @@
   border-width: 0.625rem 0 0; /* 10px */
   border-image: var(--gradient-brandreverse) 1;
   margin-top: 1.875rem; /* 30px */
-  color: #ffffff;
+  color: var(--default-white, #fff);
   font-size: 70%;
   display: flex;
   flex-direction: column;
@@ -17,7 +17,7 @@
   clear: both;
 }
 
-@media (max-width: 400px) {
+@media (width <= 400px) {
   .global-footer {
     max-width: 24.375rem; /* 390px  */
     gap: 2rem; /* 32px  */
@@ -37,15 +37,6 @@
   display: flex;
   flex-direction: row;
   gap: 13.125rem; /* 210px  */
-}
-
-.link-container a {
-  color: var(--default-white, #fff);
-}
-
-.contact-container p,
-a {
-  color: var(--default-white, #fff);
 }
 
 .list-container {
@@ -74,7 +65,11 @@ a {
   margin-top: 0.9375rem; /* 15px  */
 }
 
-.GlobalFooter h3 {
+.global-footer a {
+  color: var(--default-white, #fff);
+}
+
+.global-footer h3 {
   color: var(--default-white, #fff);
   margin-bottom: 0.3125rem; /* 5px  */
   margin-top: 0;
