--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -57,6 +57,7 @@
   <title>Bioconductor<%= title %></title>
   <link rel="stylesheet" type="text/css" href="/style/fonts.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/colors.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/announcement.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/bioconductor-v2.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/bioconductor.css" media="screen" /><% if item.identifier =~ /^\/help\/workflows\/.*\// %>
   <link rel="stylesheet" type="text/css" href="/style/workflows.css" media="screen" /><% end %>
