--- a/assets/style/announcement.css
+++ b/assets/style/announcement.css
@@ -1,15 +1,16 @@
 .announcement {
   display: flex;
   width: 100%;
-  height: 30px;
+  height: 3rem;
   justify-content: center;
   align-items: center;
-  gap: 16px;
+  gap: 1rem;
+  font-size: 0.8125rem;
 }
 
 .announcement p {
-  padding-top: 11px;
-  padding-bottom: 12px;
+  padding-top: 0.7rem;
+  padding-bottom: 0.75rem;
 }
 
 .announcement-default {
