Finished mobile footer

--- a/layouts/_footer_new.html
+++ b/layouts/_footer_new.html
@@ -66,18 +66,16 @@
     </div>
 
     <div class="socials-logo-container">
-      <span class="socials">
-        <img src="/images/icons/svgs/twitter.svg" />
-        <img src="/images/icons/svgs/youtube.svg" />
-        <img src="/images/icons/svgs/linkedin.svg" />
-        <img src="/images/icons/svgs/mastodon.svg" />
-      </span>
-      <span class="global_footer_logo_bc noprint">
-        <img
-          src="/images/logo/svg/BC-Logo-White.svg"
-          height="51"
-          width="154"
-          alt="" />
+      <div class="socials">
+        <span>
+          <img src="/images/icons/svgs/twitter.svg" />
+          <img src="/images/icons/svgs/youtube.svg" />
+          <img src="/images/icons/svgs/linkedin.svg" />
+          <img src="/images/icons/svgs/mastodon.svg" />
+        </span>
+      </div>
+      <span class="footer-logo">
+        <img src="/images/logo/svg/BC-Logo-White.svg" alt="" />
       </span>
     </div>
   </div>
