--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -17,15 +17,6 @@
   clear: both;
 }
 
-@media (width <= 400px) {
-  .global-footer {
-    max-width: 24.375rem; /* 390px  */
-    gap: 2rem; /* 32px  */
-    height: 47.3125rem; /* 757px  */
-    padding: 2rem 0;
-  }
-}
-
 .link-container-inner {
   display: flex;
   flex-direction: row;
@@ -71,19 +62,81 @@
 
 .global-footer h3 {
   color: var(--default-white, #fff);
-  margin-bottom: 0.3rem; /* 5px  */
-  margin-top: 0;
 }
 
 .socials-logo-container {
-  padding: 0.5rem 1.5rem; /* 9px , 24px  */
+  display: flex;
+  align-items: center;
+  gap: 64px;
 }
-
 .socials img {
   padding-right: 2rem; /* 30px  */
   margin-bottom: 0;
 }
 
 .socials {
-  margin-right: 3.125rem; /* 50px  */
+  margin-top: 10px;
+  margin-top: 26px;
+}
+.footer-logo {
+  padding: 0;
+}
+
+.footer-logo img {
+  width: 193.332px;
+  height: 55.632px;
+  padding-top: 1rem;
+}
+
+@media (width <= 700px) {
+  .global-footer {
+    max-width: 100%; /* 390px  */
+    gap: 2rem; /* 32px  */
+    height: auto; /* 757px  */
+    padding: 32px;
+    align-items: center;
+  }
+
+  .link-container {
+    flex-direction: column;
+    gap: 0px;
+  }
+
+  .link-container-inner {
+    flex-direction: row;
+    gap: 37px;
+  }
+  .list-container {
+    display: flex;
+    min-width: 160px;
+  }
+
+  .logo-contact-container {
+    display: block;
+    margin-left: -78px;
+  }
+  .copyright {
+    margin-top: 0px;
+    margin-left: 0px;
+  }
+
+  .footer-logo {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+
+  .footer-logo img {
+    width: 193.332px;
+    height: 55.632px;
+  }
+  .socials-logo-container {
+    display: block;
+    padding: 24px 0rem;
+  }
+
+  .socials {
+    margin: auto;
+    padding-right: 16px;
+    padding-left: 16px;
+  }
 }
