added footer to course.html

--- a/layouts/course.html
+++ b/layouts/course.html
@@ -27,7 +27,7 @@
         <%= render("/_bioc_release_packages/") %> <%= render("/_documentation/")
         %>
       </div>
-      <%= render("/_footer/") %>
+      <%= render("/_footer_new/") %>
     </div>
   </body>
 </html>
