--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -1,14 +1,11 @@
 body {
   font-family: "Atkinson Hyperlegible", sans-serif;
+  background-color: var(--neutral-n50);
+  margin: 0;
 }
 
-/* "site-container" is the single div containing every other element in the site.
-   it floats center, with no vertical margins, and provides the overall
-   width of the site. we provide both an id and a class name in order
-   to allow more flexible cascading: id rules are highly ranked while
-   class names play nicer with other rules. */
-
-#site-container {
-  margin: 0 auto; /* floats the design center */
-  width: 1600px; /* change the site design width here */
+.container {
+  margin: 0 auto;
+  width: calc(100% - 3rem);
+  max-width: 1600px;
 }
