--- a/layouts/components/_header.html
+++ b/layouts/components/_header.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
 <header id="site-masthead" class="site-masthead">
-  <%= render("/_announcement/") %>
+  <%= render("/components/_announcement/") %>
  <!-- If there are no announcements, comment out the element  -->
   <div class="header-size">
     <div class="header-logo">  
       <a href="/">
         <img
-          src="/images/Logo.svg"
+          src="/images/logo/svg/Logo.svg"
           class="masthead-logo"
           alt="Bioconductor - open source software for bioinformatics"
         />
