--- a/layouts/default.html
+++ b/layouts/default.html
@@ -3,10 +3,10 @@
 prefix="og: http://ogp.me/ns#">
   <%= render("/_sitehead/") %>
   <body>
+	<%= render("/components/_header/") %>
     <%= render("/_nav/", :section_navigation => has_subnav?(@item) && subnav_items(@item).length > 0) %>
 
     <div id="site-container" class="site-container">
-	<%= render("/_header/") %>
       <% if has_subnav?(@item) %>
       <div id="PageContent" class="PageContent WithRightRail">
       <% else %>
