--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -9,3 +9,58 @@ body {
   width: calc(100% - 3rem);
   max-width: 1400px;
 }
+
+main > .container {
+  display: grid;
+  gap: 2rem;
+  grid-template-areas:
+    "left-col .";
+}
+
+.left-col {
+  grid-area: left-col;
+}
+
+nav.subnav {
+  border-radius: 0.5rem;
+  border: 1px solid var(--primary-p75);
+  padding: 0.5rem;
+}
+
+nav.subnav a {
+  text-decoration: underline;
+  display: block;
+  padding: 0.5rem;
+  padding-bottom: 0.75rem;
+  color: black;
+}
+
+nav.subnav a::after {
+  content: " >";
+  padding-left: 0.75rem;
+  float: right;
+}
+
+.breadcrumbs {
+  list-style-type: none;
+  display: flex;
+  gap: 0.5rem;
+  margin: 0;
+  padding: 0;
+  line-height: 1.3rem;
+}
+
+.breadcrumbs li:not(:first-of-type) {
+  background-image: url("/images/chevron_right.svg");
+  background-repeat: no-repeat;
+  padding-left: 1.625rem; /* make space for the background image */
+}
+
+.breadcrumbs li:last-of-type {
+  font-weight: bold;
+}
+
+.breadcrumbs a {
+  color: var(--neutral-n400);
+  text-decoration: none;
+}
