--- a/layouts/components/_header.html
+++ b/layouts/components/_header.html
@@ -1,8 +1,8 @@
 <header id="site-masthead" class="site-masthead">
   <%= render("/components/_announcement/") %>
- <!-- If there are no announcements, comment out the element  -->
+  <!-- If there are no announcements, comment out the element  -->
   <div class="header-size">
-    <div class="header-logo">  
+    <div class="header-logo">
       <a href="/">
         <img
           src="/images/logo/svg/Logo.svg"
@@ -12,7 +12,7 @@
       </a>
     </div>
 
-    <nav class="header-desktop"> 
+    <nav class="header-desktop">
       <div class="nav-links">
         <a class="format-bold" href="/about/">About</a>
         <a class="format-bold" href="/developers/">Developers</a>
@@ -26,20 +26,35 @@
           method="GET"
           action="/help/search/index.html"
         >
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none">
-        <path d="M17.5 18.25L12.5 13.25M14.1667 9.08333C14.1667 12.305 11.555 14.9167 8.33333 14.9167C5.11167 14.9167 2.5 12.305 2.5 9.08333C2.5 5.86167 5.11167 3.25 8.33333 3.25C11.555 3.25 14.1667 5.86167 14.1667 9.08333Z" stroke="#3792AD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-          <input id="search-bar" name="search-bar" placeholder="Search"/>
+          <img
+            src="/images/icons/search-icon.svg"
+            class="search-icon"
+            alt="Search icon"
+          />
+          <input id="search-bar" name="search-bar" placeholder="Search" />
         </form>
       </div>
 
-    <a class="header-button" href="/install/">
-      <span class="format-bold">Get Started <svg xmlns="http://www.w3.org/2000/svg" width="14" height="15" viewBox="0 0 14 15" fill="none">
-        <path d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333" stroke="#3792AD" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
+      <a class="header-button" href="/install/">
+        <span class="format-bold"
+          >Get Started
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="14"
+            height="15"
+            viewBox="0 0 14 15"
+            fill="none"
+          >
+            <path
+              d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+              stroke="#3792AD"
+              stroke-width="2.2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
           </svg>
-      </span>
-    </a>
+        </span>
+      </a>
     </nav>
-
-  </div>  
+  </div>
 </header>
