[WIP] hid navigation if dropping below 480px wide

--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -64,3 +64,13 @@ nav.subnav a::after {
   color: var(--neutral-n400);
   text-decoration: none;
 }
+
+@media (max-width: 480px) {
+  main > .container {
+    display: block;
+  }
+
+  .left-col {
+    display: none;
+  }
+}
