--- a/assets/style/bioconductor-v2.css
+++ b/assets/style/bioconductor-v2.css
@@ -19,6 +19,7 @@ main > .container {
 
 .left-col {
   grid-area: left-col;
+  width: 300px;
 }
 
 nav.subnav {
@@ -33,19 +34,16 @@ nav.subnav a {
   padding: 0.5rem;
   padding-bottom: 0.75rem;
   color: black;
-}
-
-nav.subnav a::after {
-  content: " >";
-  padding-left: 0.75rem;
-  float: right;
+  background-image: url("/images/chevron_right.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
 }
 
 .breadcrumbs {
   list-style-type: none;
   display: flex;
   gap: 0.5rem;
-  margin: 0;
+  margin: 0 0 0.75rem 0;
   padding: 0;
   line-height: 1.3rem;
 }
